add handler for getCollectionById
